# model-inference

./: .gitignore  README.md  client.py  glue_client.py  gpt-neo-inference.py  helpers.py  init_inference.py  init_inference_t5.py  kill_tritonserver.sh  partitioner.py  power.py  run_tritonserver.sh  sanity_check.py  setup.cfg  setup.sh  slurm_batch.sh  tmp.trace  torch_onnx.py
inference_dump/: calibrate.py  gpt-5.json  gpt-5_decision.json  gpt_dump.py  hybrid.py  plot.py  t5-3.json  t5-3_decision.json  t5-4.json  t5-4_decision.json  t5_dump.py  t5_dump.sh  vit-4.json  vit-4_decision.json  vit_dump.py
plots/: accuracy_bar.py  avg_energy_bar.py  avg_latency_bar.py  avg_throughput_bar copy.py  avg_throughput_bar.py  carbon_barplot.py  color_scale.py  cost_model_barplot.py  gpt-3-energy.py  intro_curve.py  latency_barplot.py  latency_ovhd_barplot.py  scale_latency_bar.py  tail_latency_bar.py  throughput_barplot.py  val_ovhd_barplot.py
profile/: cost_corr.py  gen_multiplex.py
proto/: inference.proto
ray/: kill_serve.sh  meta.json  run_serve.sh  single_model.py  t5_sst2_composed.py  t5_sst2_ensemble.py
rayserve/: bert_client.py  bert_meta.json  cluster.yaml  dc.py  gpt_client.py  gpt_meta_8.json  gpt_meta_cluster.json  gpt_meta_cluster_test.json  gpt_meta_optim.json  gpt_meta_optim_test.json  gpt_meta_presv.json  gpt_meta_presv_test.json  gpt_test.py  inference.py  meta.json  slurm_batch.sh  t5_client.py  t5_meta.json  t5_meta_cluster.json  t5_meta_optim.json  t5_meta_presv.json  vit_client.py  vit_meta copy.json  vit_meta.json  vit_meta_cluster.json  (+3 more)
tests/: multi.py  (+22 more)
(+261 files in other folders)
