[metadata]
name = triton_inference
version = 0.0.1
author = Leyang Xue 
author_email = leyang.xue@ed.ac.uk
description = Energy-efficient Collaboration System for Giant Model Inference
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/drunkcoding/model-inference
project_urls =
    Bug Tracker =https://github.com/drunkcoding/model-inference/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8